# IndieStudio

./: README.md  compile.sh
include/: Ai.hpp  Bomb.hpp  BonusMap.hpp  Drawing.hpp  Model.hpp  Player.hpp  Rectangle.hpp  Texture.hpp  card.hpp  const.hpp  end.hpp  error.hpp  gameCore.hpp  gameloop.hpp  help.hpp  lib.hpp  libOutils.hpp  loadGame.hpp  loadOrNew.hpp  map.hpp  menu.hpp  music.hpp  newGame.hpp  pause.hpp  playerUI.hpp  selectPlayer.hpp  sound.hpp  wall.hpp
src/: CMakeLists.txt  main.cpp
src/encapsulation/: drawing.cpp  model.cpp  music.cpp  rectangle.cpp  sound.cpp  texture.cpp
src/error/: error.cpp
src/game/: end.cpp  gamecore.cpp  gameloop.cpp  map.cpp
src/lib/: opoverloading.cpp  tools.cpp
src/loadOrNew/: cleanFile.cpp  loadGame.cpp  loadOrNew.cpp  newGame.cpp
src/menu/: help.cpp  menu.cpp
src/pause/: pause.cpp
src/select/: selectPlayer.cpp
